<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Stephanie</string>
    <string name="last_name">Marbella</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">I am pursuing a career in data science, data engineering, or data analytics.\nI have a Bachelor of Science degree in Information Science and Technology at the University of Arizona.\nAs of 2023, I am currently taking a Master of Science in Data Science at the University of Arizona.</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 ARTS AND CRAFTS</string>
    <string name="profile_hobby_second_text">🥈 BAKING/COOKING</string>
    <string name="profile_hobby_third_text">🥉 READING EDUCATIONAL LITERATURE</string>
</resources>